Define the Validations

--- a/views/blockchain.hbs
+++ b/views/blockchain.hbs
@@ -10,7 +10,7 @@
            Add Network
         </div>
         <div class="panel-body">
-          <form method="post" action="">
+          <form method="post" action="/blockchain/post">
             <div class="form-group">
               <label class="col-md-4">Network Name</label>
               <input type="text" class="form-control" name="name"/>
